--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logoFrava.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDP-VRUbTAet4wzegqKSaiUdEfDTs4fLow&callback=initMap">
+  </script>
+    <title>Grupo Frava</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
